paragraph formatted and ingredient lists formatted

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section id = "description">
             <p>
-            For the fig-swirl: melt butter over medium heat in a saucepan. Add brown sugar and stir to dissove. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
+                For the fig-swirl: melt butter over medium heat in a saucepan. Add brown sugar and stir to dissove. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
             </p>
 
             <p>
@@ -61,21 +61,21 @@
 
         <section id = "recipe">
             <ul id = ing1>
-            <li>1 1/2 cups milk</li>
-            <li>1/2 cup mascarpone</li>
-            <li>1/2 tsp pink salt</li>
-            <li>1 lb Black Mission Figs</li>
-            <li>1/2 cup brown sugar</li>
-            <li>2-4 tbsp water</li>
+            <li><input type="checkbox">1 1/2 cups milk</li>
+            <li><input type="checkbox">1/2 cup mascarpone</li>
+            <li><input type="checkbox">1/2 tsp pink salt</li>
+            <li><input type="checkbox">1 lb Black Mission Figs</li>
+            <li><input type="checkbox">1/2 cup brown sugar</li>
+            <li><input type="checkbox">2-4 tbsp water</li>
         </ul>
             
-            <ul id = ing2>
-            <li>1 1/2 heavy cream</li>
-            <li>1/3 granulated sugar</li>
-            <li>2 egg yolks</li>
-            <li>1 lemon, juiced</li>
-            <li>1 tbsp butter</li>
-            <li>1 cup honey roasted pecans, roughly chopped</li>
+            <ul id = ing2 list-style-type: none>
+            <li><input type="checkbox">1 1/2 heavy cream</li>
+            <li><input type="checkbox" checked disabled><s>1/3 granulated sugar</s></li>
+            <li><input type="checkbox" checked disabled><s>2 egg yolks</s></li>
+            <li><input type="checkbox">1 lemon, juiced</li>
+            <li><input type="checkbox">1 tbsp butter</li>
+            <li><input type="checkbox">1 cup honey roasted pecans, roughly chopped</li>
         </ul>
         </section>
     </main>
